--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,21 +1,17 @@
 ---
 
 galaxy_info:
-  role_name: houdini-user-config
-  namespace: philnewm
-  author: author_name
+  role_name: houdini_user_config
+  author: philnewm
   description: ansible-role-template description
-  license: some_license
+  license: MIT
   min_ansible_version: "2.1"
   platforms:
     - name: EL
       versions:
         - "9"
-    - name: Debian
-      versions:
-        - "bookworm"
     - name: "Ubuntu"
       versions:
         - "jammy"
   galaxy_tags: []
-dependencies: []
+dependencies: [philnewm.houdini]
