--- a/tasks/absent.yml
+++ b/tasks/absent.yml
@@ -1,35 +1,7 @@
 ---
 
-- name: Remove from gnome favorites
-  when: "'gnome-shell' in ansible_facts.packages and houdini_gnome_favorite"
-  block:
-    - name: Set desktop launcher
-      ansible.builtin.set_fact:
-        houdini_desktop_launcher: "com.sidefx.houdini{{ houdini_version_full }}.desktop"
-
-    - name: Get current favorite apps
-      become: true
-      become_user: "{{ user }}"
-      community.general.dconf:
-        key: /org/gnome/shell/favorite-apps
-        state: read
-      register: current_favorites
-
-    - name: Clean favorites
-      ansible.builtin.set_fact:
-        gnome_favorites: "{{ current_favorites.value | from_yaml | default([], true) }}"
-
-    # TODO find a leaner way to do this
-    - name: Remove houdini from favorites
-      become: true
-      become_user: "{{ user }}"
-      when: houdini_desktop_launcher in gnome_favorites
-      community.general.dconf:
-        key: /org/gnome/shell/favorite-apps
-        value: >-
-          {{ (gnome_favorites | difference([houdini_desktop_launcher]) | to_json)
-            if (gnome_favorites | difference([houdini_desktop_launcher])) | length > 0
-            else '@as []' }}
-        state: present
+- name: No absent logic
+  ansible.builtin.debug:
+    msg: "This role doesn't provide any removal logic"
 
 ...
