--- a/tasks/development_setup.yml
+++ b/tasks/development_setup.yml
@@ -4,7 +4,9 @@
 - name: Install pip module dependency
   become: true
   ansible.builtin.package:
-    name: python3-packaging
+    name:
+      - python3-packaging
+      - python3-setuptools
     state: present
 
 - name: Get hython path
